tests/ui/fail_wrong_reasoning_effort.stderr
error[E0599]: the method `reasoning_none` exists for struct `ResponseRequestBuilder<ai_client::openai::responses::Gpt5_4Pro>`, but its trait bounds were not satisfied
 --> tests/ui/fail_wrong_reasoning_effort.rs:6:10
  |
4 |       let _ = ResponseRequest::<Gpt5_4Pro>::builder()
  |  _____________-
5 | |         .input_text("hello")
6 | |         .reasoning_none()
  | |_________-^^^^^^^^^^^^^^
  |
 ::: src/openai/responses/models.rs
  |
  |           pub struct $name;
  |           ----------------- doesn't satisfy `_: SupportsNoReasoning`
  |
  = note: the following trait bounds were not satisfied:
          `ai_client::openai::responses::Gpt5_4Pro: SupportsNoReasoning`
